z-index fix

--- a/styles/secondary-page.scss
+++ b/styles/secondary-page.scss
@@ -38,7 +38,6 @@
     align-items: center;
     background-size: cover;
     h2 {
-      z-index: 999;
       background-color: $color-secondary;
       padding: 8px 16px;
       color: $color-text;
