--- a/styles/style.css
+++ b/styles/style.css
@@ -178,7 +178,6 @@
     background-size: cover;
   }
   .secondary--image h2 {
-    z-index: 999;
     background-color: #94c41c;
     padding: 8px 16px;
     color: #4c545c;
